scripts/op_file_svm_lin.txt
==========================================
SLURM_JOB_ID = 896325
SLURM_NODELIST = gnode022
SLURM_JOB_GPUS = 0
==========================================
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
procs: 30999 31001 31002 31003 31004 31005 31006 31007 31008 31009
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py  File "", line ../src/svm.py", line 22
22    
print("using reduced data", flush=True)
        print("using reduced data", flush=True)
                                                                     ^
 ^
SyntaxError: SyntaxErrorinvalid syntax: 
invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
  File "../src/svm.py", line 22
    print("using reduced data", flush=True)
                                     ^
SyntaxError: invalid syntax
